css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
for details on configuring this project to bundle and minify static web assets. */

a.navbar-brand {
    white-space: normal;
    text-align: center;
    word-break: break-all;
    background-color: powderblue;
}

/* Provide sufficient contrast against white background */
a {
  color: #0366d6;
}

.btn-primary {
  color: #fff;
  background-color: #1b6ec2;
  border-color: #1861ac;
}

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
  color: #fff;
  background-color: #1b6ec2;
  border-color: #1861ac;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
  font-size: 14px;
}
@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.border-top {
  border-top: 0px;
}
.border-bottom {
  border-bottom: 0px;
}

.box-shadow {
  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}

button.accept-policy {
  font-size: 1rem;
  line-height: inherit;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
}

body {

}

.footer {
    
    position: absolute;
    bottom: 0;
    width: 100%;
    white-space: nowrap;
    background: none;
}
.container {
    background-color: aliceblue;
    padding-top: 0px;

}

.main-container{
    padding-top: 140px;
}
.navbar-nav {
    background-color: powderblue;
    text-align: center;
}
.contentcontent-wrapper {
    padding-top: 3.5vw;
    padding-left: 0px;
    padding-right:0px;
    padding-bottom:0px;
}
.content-wrapper-sidebar{
    background-image: url(../Assets/background.jpg);
    background-position: bottom center;
    padding: 0px;
}

.contact-info {
    text-align: center;
    background-color: darkgrey;
    font-size: 2vw;
}
.nav-bar {
    background-color: cadetblue;
    position: fixed;
    width: 100%;
    height: 3.5vw;
    z-index: 1;
}
.nav-bar-options {
    text-align: center;
    height: 3.5vw;
    vertical-align: middle;
}
.nav-bar-option{
    text-wrap:normal;
    font-size: 2vw;
    display:inline;
    vertical-align:middle;
    height:100%;
    width:100%;
    color:white;
    }

.nav-bar-option:hover {
    background-color: aquamarine;
    color: white;
    text-decoration-line:none;
}

.nav-bar-selected {
    border-style: solid;
    border-top-width: 0px;
    border-left-width: 0px;
    border-right-width: 0px;
    border-bottom-width: .2vw;
    border-color: white;
}

